# libera_utils

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  CHANGES.md  CLAUDE.md  Dockerfile  LICENSE.txt  README  README.md  build.sh  db-compose.yml  docker-compose.yml  docker_build.sh  generate_solar_cal_yaml.py  pylintrc  pyproject.toml  rebuild_dev_db.sh  setup.cfg  setup.py  test.sh
.claude/agents/: address-pr-comments.md  pytest-runner.md
.gemini/agents/: address-pr-comments.md  pytest-runner.md
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-env/: action.yml
.github/instructions/: libera-utils.instructions.md
.github/workflows/: _build.yml  _run-tests.yml  copilot-setup-steps.yml  daily-tests.yml  pr-tests.yml  pre-commit.yml  pypi-publish.yml
database/: flyway.conf
database/initdb/: initdb.sh
database/migrations/: V0.1__Create_initial_relations.sql  V1.0__Create_baseline_schema.sql  put-your-sql-migrations-here.txt
database/migrations/V0__roles_and_permissions/: V0.1__alter_default_privileges_in_sdp_schema.sql
database/migrations/V1__baseline_schema/: V1.0__l0_relations.sql  V1.1__kernel_file_relations.sql  V1.2__l1b_file_relations.sql
doc/: build_release.md  configuration.md  database.md  dev_environment_setup.md  docker.md  logging.md  nexus_container_registry.md  spice.md  testing.md
doc/source/: changelog.md  conf.py  dev-docs.rst  dev-env-docs.rst  dev-ref-docs.rst  developer-docs.rst  index.rst  readme.rst  user-docs.rst
doc/source/_templates/: autosummary.rst  autosummary_class.rst
docker/: libera-sdp-test.dockerfile  libera-sdp-test.dockerignore  libera-sdp.dockerfile  libera-sdp.dockerignore
jenkins_scripts/: JenkinsFile-PRTester  JenkinsFile-PypiPublisher  JenkinsFile-UnitTester
libera_sdp/: __init__.py  cli.py  config.json  config.py  decorators.py  geolocation.py  kernel_maker.py  kernels.py  logutil.py  packets.py  spiceutil.py  time.py  version.py
libera_sdp/cli/: kernel_maker.py
libera_sdp/data/: config.json  jpss1_geolocation_xtce_v1.xml  jpss3_contrived.tsc  libera_fk_rev01.tf  libera_fk_v01.tf
libera_sdp/db/: __init__.py  database.py  mixins.py  models.py
libera_sdp/io/: caching.py  filenaming.py  hdf.py  hdfeos.py  hdfeos_swath.py  msopck.py  packets.py  smart_open.py
libera_utils/: __init__.py  cli.py  config.py  constants.py  geolocation.py  kernel_maker.py  logutil.py  metadata_writer.py  obsids.py  packet_configs.py  packets.py  quality_flags.py  scene_definitions.py  scene_id.py  spice_utils.py  spiceutil.py  time.py  version.py
libera_utils/aws/: constants.py  ecr_upload.py  manual_processing.py  processing_step_function_trigger.py  s3_utilities.py  utils.py
libera_utils/backports/: __init__.py  enum_3_11.py
libera_utils/data/: config.json  icie_xtce_tlm.xml  jpss1_geolocation_xtce.xml  jpss1_geolocation_xtce_v1.xml  l1a_processing_configs.yml  libera_azel1048_xtce.xml  libera_dimensions.yml  static_project_metadata.yml
libera_utils/db/: __init__.py  database.py  database_utils.py  dynamodb_utils.py  mixins.py  models.py
libera_utils/footprint_matching/: __init__.py  camera_segmentation.py  geometry.py  product.py  psf.py  types.py  verify_readers.py
libera_utils/io/: caching.py  construction_record.py  filenaming.py  hdf.py  manifest.py  netcdf.py  packet_ingest.py  pds.py  pds_ingest.py  product_definition.py  smart_open.py  umm_g.py
libera_utils/l1a/: l1a_packet_configs.py  nom_hk_trim.py  packets.py  wfov_image_metadata.py  wfov_image_time.py
libera_utils/libera_spice/: kernel_manager.py  spice_utils.py
libera_utils/scene_identification/: __init__.py  _runner.py  scene_definitions.py  scene_id.py
notebooks/: camera_segmentation_demo.ipynb  geometry_demo.ipynb
scripts/: generate_fmatch_example_products.py  verify_readers.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_geolocation.py  test_kernel_maker.py  test_kernels.py  test_logutil.py  test_packets.py  test_spiceutil.py  test_time.py
tests/integration/: __init__.py  test_kernel_maker.py  test_kernel_manager.py  test_l0_ingest.py  test_l1a_processing.py  test_los_alignment.py  test_nom_hk_trim.py  test_packets.py  test_scene_id.py  test_scene_id_runner.py  test_tier0_geolocation.py  test_tier0_kernel.py  test_tier1_geolocation.py
tests/plugins/: aws_fixtures.py  data_path_fixtures.py  data_product_fixtures.py  database_fixtures.py  integration_test_fixtures.py  l1a_fixtures.py  manifest_fixtures.py  s3_fixtures.py  spice_fixtures.py
tests/test_cli/: test_kernel_maker.py
tests/test_data/: J01_G011_LZ_2021-04-09T02-00-00Z_V01.CONS  J01_G011_LZ_2021-04-09T02-00-00Z_V01.DAT1  LIBERA_INPUT_MANIFEST_01GDHWG4R0W8KXWY0KRDD6BZTT.json  LIBERA_INPUT_MANIFEST_20220922T123456.json  P1590011AAAAAAAAAAAAAT21099051420500.PDS  P1590011AAAAAAAAAAAAAT21099065436900.PDS  P1590011AAAAAAAAAAAAAT21099091211400.PDS  P1590011AAAAAAAAAAAAAT21099091211401.PDS  PGE4_PCF_17_2019002423_01p00p06.sample.json  bad_record.CONS  example_logging_config.yml  input_manifest_20220922t123456.json  input_spice_manifest_20221216t204759.json  libera_input_manifest_20220922t123456.json  libera_input_manifest_2023-01-25t192539.json  libera_input_manifest_20230125t192539.json  libera_jpss_20210408t235850_20210409t015849.bsp  libera_jpss_20210408t235959_20210409t015958.bc  libera_output_manifest_20230220t220427.json  naif_pck_index.html  test_variable_definitions.yml  testhdf5file.he5  testtextfile.txt
tests/test_db/: test_database.py  test_mixins.py  test_models.py
tests/test_io/: test_caching.py  test_filenaming.py  test_hdf.py  test_hdfeos_swath.py  test_packets.py  test_smart_open.py
tests/unit/: quality_flags_test.py  test_cli.py  test_config.py  test_constants.py  test_geolocation.py  test_kernel_maker.py  test_kernel_maker2.py  test_logutil.py  test_obsids.py  test_packet_configs.py  test_packets.py  test_quality_flags.py  test_scene_definitions.py  test_scene_id.py  test_scene_id_cam.py  test_spice_utils.py  test_spiceutil.py  test_time.py
(+260 files in other folders)
