
[tool.poetry]
name = "libera_utils"
version = "0.1.1"
description = "Utility package for Libera Science Data Processing and the Libera Science Data Center."
authors = [  # Alphabetical
    "Stephane Beland <stephane.beland@lasp.colorado.edu>",
    "Gavin Medley <gavin.medley@lasp.colorado.edu>",
    "Laura Sandoval <laura.sandoval@lasp.colorado.edu>"
]

#[[tool.poetry.source]]
#name = "lasp-pypi-internal"
#url = "https://artifacts.pdmz.lasp.colorado.edu/repository/lasp-pypi/simple"

[[tool.poetry.source]]
name = "lasp-pypi"
url = "https://lasp.colorado.edu/repository/lasp-pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.1"
bitstring = "^3.1"
h5py = "^3.3"
numpy = "^1.21"
spiceypy = "^5.0"
lasp-packets = {version = "^2.0", source = "lasp-pypi"}
requests = "^2.26"
matplotlib = {version = "^3.4", optional = true}
SQLAlchemy = "^1.4"
psycopg2 = "^2.9"
cloudpathlib = {extras = ["s3"], version = "^0.9"}
watchtower = "^3.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"
pylint = "^2.9.3"
responses = "^0.21"
pytest-randomly = "^3.10.2"
moto = {extras = ["s3"], version = "^3.1"}
bandit = "^1.7.4"

[tool.poetry.extras]
plotting = ["matplotlib"]

[tool.poetry.scripts]
libera-utils = 'libera_utils.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
