[tool.poetry]
name = "libera_utils"
version = "1.0.0"
description = "Utility package for Libera Science Data Processing and the Libera Science Data Center."
authors = [  # Alphabetical
    "Stephane Beland <stephane.beland@lasp.colorado.edu>",
    "Gavin Medley <gavin.medley@lasp.colorado.edu>",
    "Laura Sandoval <laura.sandoval@lasp.colorado.edu>",
    "Matt Watwood <matt.watwood@lasp.colorado.edu>"
]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.1"
bitstring = "^3.1"
h5py = "^3.3"
numpy = "^1.21"
spiceypy = "^5.0"
lasp-packets = {version = "^2.0"}
requests = "^2.26"
SQLAlchemy = "^1.4"
setuptools = "^65"
psycopg2 = "^2.9"
cloudpathlib = {extras = ["s3"], version = "^0"}
watchtower = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4"
pylint = "^2.9.3"
responses = "^0.21"
pytest-randomly = "^3.10.2"
moto = {extras = ["s3"], version = "^4.0"}
bandit = "^1.7.4"

[tool.poetry.group.plotting.dependencies]
matplotlib = {version = "^3.4", optional = true}

[tool.poetry.group.docgen.dependencies]
Sphinx = {version = "^4.2.0"}
sphinx-rtd-theme = { version = "^1.0.0"}
sphinxcontrib-napoleon = {version = "^0.7"}
sphinxcontrib-confluencebuilder = {version = "^1.9.0"}
sphinx-autoapi = { version = "^1.8.4"}
myst-parser = {version = "^0.18.0"}
numpydoc = {version = "^1.4.0"}
m2r2 = {version = "^0.3.0"}

[tool.poetry.scripts]
libera-utils = 'libera_utils.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
