[metadata]
name = libera_sdp
author = Gavin Medley, Stephane Beland
author_email = Gavin.Medley@lasp.colorado.edu, Stephane.Beland@lasp.colorado.edu
license = Copyright 2021 Regents of the University of Colorado. All rights reserved.
license_file = LICENSE.txt
url = https://lasp.colorado.edu/nucleus/projects/LIBSDC/repos/libera_sdp
description = Libera science data processing algorithms
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, space, science
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
platforms =
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
install_requires =
    astropy
    h5py
    lasp_packets
    numpy
    spiceypy

python_requires = >=3.8, <4

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    build
    coverage
    pylint
    pytest
    twine
test =
    coverage
    pylint
    pytest
build =
    build
    twine

[options.entry_points]
console_scripts =
    make-jpss-spk = libera_sdp.cli.kernel_maker:make_jpss_spk
    make-jpss-ck = libera_sdp.cli.kernel_maker:make_jpss_ck
    make-libera-az-el-ck = libera_sdp.cli.kernel_maker:make_az_el_ck
